[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Karen Yavine Shemesh <karen@snyk.io>"]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "=2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
